[tool.poetry]
name = "roster"
version = "0.1.7"
description = "Python object registers. Keep track of your classes, functions and data."
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/roster"
repository = "https://github.com/tombulled/roster"
keywords = ["youtube", "roster", "record", "register"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"